--- a/pages/register.html
+++ b/pages/register.html
@@ -3,8 +3,9 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Speakers - Styles Conference</title>
+    <title>Register - Styles Conference</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
@@ -17,9 +18,9 @@
         <a href="index.html">Styles <br> Conference</a>
       </h1>
 
-      <h3>August 24&ndash;26th &mdash; Chicago, IL</h3>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-      <nav>
+      <nav class="nav primary-nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
@@ -33,7 +34,7 @@
 
     <section class="container">
 
-      <h1>Speakers</h1>
+      <h1>Register</h1>
 
     </section>
 
@@ -43,7 +44,7 @@
 
       <small>&copy; Styles Conference</small>
 
-      <nav>
+      <nav class="nav">
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
         <a href="schedule.html">Schedule</a>
