--- a/index.html
+++ b/index.html
@@ -1,91 +1,104 @@
-<!doctype html>
-<html class="no-js" lang="">
+<!DOCTYPE html>
+<html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <title>Styles Conference</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <head>
+    <meta charset="utf-8">
+    <title>Styles Conference</title>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+  </head>
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <body>
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
+    <!-- Header -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+    <header class="primary-header container group">
 
-  <meta name="theme-color" content="#fafafa">
-</head>
+      <h1 class="logo">
+        <a href="index.html">Styles <br> Conference</a>
+      </h1>
 
-<body>
+      <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
-  <!-- Add your site or application content here -->
-  <header class="container">
-    <h1>
-      <a href="index.html">Styles Conference</a>
-    </h1>
-    <h3>March 21&ndash;26th &mdash; Nairobi, Kenya</h3>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="speakers.html">Speakers</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="venue.html">Venue</a>
-      <a href="register.html">Register</a>
-    </nav>
-  </header>
-  <section class="container">
+      <nav class="nav primary-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="pages/speakers.html">Speakers</a></li><!--
+          --><li><a href="pages/schedule.html">Schedule</a></li><!--
+          --><li><a href="pages/venue.html">Venue</a></li><!--
+          --><li><a href="pages/register.html">Register</a></li>
+        </ul>
+      </nav>
+
+    </header>
+
+    <!-- Hero -->
+
     <section class="hero container">
+
       <h2>Dedicated to the Craft of Building Websites</h2>
+
       <p>Every year the brightest web designers and front-end developers descend on Chicago to discuss the latest technologies. Join us this August!</p>
-      <a class="btn btn-alt" href="register.html">Register Now</a>
-    </section>
-    <section class="container">
-      <a href="speakers.html">
-        <h5>Speakers</h5>
-        <h3>World-Class Speakers</h3>
-      </a>
-      <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
-    </section>
-    <section class="container">
-      <a href="schedule.html">
-        <h5>Schedule</h5>
-        <h3>Three Inspiring Days</h3>
-      </a>
-      <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
-    </section>
-    <section class="container">
-      <a href="venue.html">
-        <h5>Venue</h5>
-        <h3>The Nairobi Theatre</h3>
-      </a>
-      <p>Within the heart of downtown Nairobi, The Nairobi Theatre will provide a beautiful conference venue.</p>
-    </section>
-  </section>
-  <footer class="container">
-    <small>&copy; Styles Conference</small>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="speakers.html">Speakers</a>
-      <a href="schedule.html">Schedule</a>
-      <a href="venue.html">Venue</a>
-      <a href="register.html">Register</a>
-    </nav>
-  </footer>
-  <script src="js/vendor/modernizr-3.11.2.min.js"></script>
-  <script src="js/plugins.js"></script>
-  <script src="js/main.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
-</body>
+      <a class="btn btn-alt" href="pages/register.html">Register Now</a>
 
+    </section>
+
+    <!-- Teasers -->
+    <section class="row">
+
+      <section class="grid">
+
+        <!-- Speakers -->
+
+        <section class="teaser col-1-3">
+          <a href="pages/speakers.html">
+            <h5>Speakers</h5>
+            <h3>World-Class Speakers</h3>
+          </a>
+          <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
+        </section><!--
+
+        Schedule
+
+        --><section class="teaser col-1-3">
+          <a href="pages/schedule.html">
+            <h5>Schedule</h5>
+            <h3>Three Inspiring Days</h3>
+          </a>
+          <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
+        </section><!--
+
+        Venue
+
+        --><section class="teaser col-1-3">
+          <a href="pages/venue.html">
+            <h5>Venue</h5>
+            <h3>The Chicago Theatre</h3>
+          </a>
+          <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
+        </section>
+
+      </section>
+    </section>
+
+    <!-- Footer -->
+
+    <footer class="primary-footer container group">
+
+      <small>&copy; Styles Conference</small>
+
+      <nav class="nav">
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="pages/speakers.html">Speakers</a></li><!--
+          --><li><a href="pages/schedule.html">Schedule</a></li><!--
+          --><li><a href="pages/venue.html">Venue</a></li><!--
+          --><li><a href="pages/register.html">Register</a></li>
+        </ul>
+      </nav>
+
+    </footer>
+
+  </body>
 </html>
