--- a/pages/schedule.html
+++ b/pages/schedule.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset="utf-8">
     <title>Schedule - Styles Conference</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Lato:100,300,400">
+    <link rel="stylesheet" href="../css/main.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:100,300,400">
   </head>
 
   <body>
@@ -15,27 +15,31 @@
     <header class="container group">
 
       <h1 class="logo">
-        <a href="index.html">Styles <br> Conference</a>
+        <a href="../index.html">Styles <br> Conference</a>
       </h1>
 
       <h3 class="tagline">August 24&ndash;26th &mdash; Chicago, IL</h3>
 
       <nav class="nav primary-nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+        <ul>
+          <li><a href="../index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --><li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
 
     </header>
 
     <!-- Main content -->
 
-    <section class="container">
+    <section class="row-alt">
+      <div class="lead container">
 
-      <h1>Schedule</h1>
+        <h1>Schedule</h1>
 
+      </div>
     </section>
 
     <!-- Footer -->
@@ -45,11 +49,13 @@
       <small>&copy; Styles Conference</small>
 
       <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="speakers.html">Speakers</a>
-        <a href="schedule.html">Schedule</a>
-        <a href="venue.html">Venue</a>
-        <a href="register.html">Register</a>
+        <ul>
+          <li><a href="../index.html">Home</a></li><!--
+          --><li><a href="speakers.html">Speakers</a></li><!--
+          --><li><a href="schedule.html">Schedule</a></li><!--
+          --><li><a href="venue.html">Venue</a></li><!--
+          --><li><a href="register.html">Register</a></li>
+        </ul>
       </nav>
 
     </footer>
