--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         <section class="teaser col-1-3">
           <a href="pages/speakers.html">
             <h5>Speakers</h5>
+            <img src="img/home/speakers.jpg" alt="Professional Speaker">
             <h3>World-Class Speakers</h3>
           </a>
           <p>Joining us from all around the world are over twenty fantastic speakers, here to share their stories.</p>
@@ -64,6 +65,7 @@
         --><section class="teaser col-1-3">
           <a href="pages/schedule.html">
             <h5>Schedule</h5>
+            <img src="img/home/schedule.jpg" alt="Schedule">
             <h3>Three Inspiring Days</h3>
           </a>
           <p>Enjoy three inspiring and action-packed days of talks, gatherings, and all-around good times.</p>
@@ -74,6 +76,7 @@
         --><section class="teaser col-1-3">
           <a href="pages/venue.html">
             <h5>Venue</h5>
+            <img src="img/home/venue.jpg" alt="Venue">
             <h3>The Chicago Theatre</h3>
           </a>
           <p>Within the heart of downtown Chicago, The Chicago Theatre will provide a beautiful conference venue.</p>
