--- a/pages/register.html
+++ b/pages/register.html
@@ -40,7 +40,49 @@
 
       </div>
     </section>
-
+    <section class="row">
+      <div class="grid">
+        <section class="col-2-3">
+          <h2>Purchase a Conference Pass</h2>
+          <h5>$99 per Pass</h5>
+          <p>Purchase your Styles Conference pass using the form to the right. Multiple passes may be purchased within the same order, so feel free to bring a friend or two along. Once your order is finished we&#8217;ll follow up and provide a receipt for your purchase. See you soon!</p>
+          <h4>Why Attend?</h4>
+          <ul class="why-attend">
+            <li>Over twenty world-class speakers</li>
+              <li>One full day of workshops and two full days of presenttions</li>
+              <li>Hosted at the Chicago Theatre, a historical landmark</li>
+              <li>August in Chicago is simply amazing</li>
+          </ul>
+        </section><!--
+       --><form action="" class="col-1-3" method="post">
+        <fieldset class="register-group">
+          <label for="">
+            Name
+            <input type="text" name="name" placeholder="Full name" required>
+          </label>
+          <label for="">
+            Email
+            <input type="email" name="email" placeholder="Email address" required>
+          </label>
+          <label for="">
+            Number of Passes
+            <select name="quantity" id="" required>
+              <option value="1" selected>1</option>
+              <option value="2">2</option>
+              <option value="3">3</option>
+              <option value="4">4</option>
+              <option value="5">5</option>
+            </select>
+          </label>
+          <label for="">
+            Comments
+            <textarea name="comments" id="" cols="30" rows="10"></textarea>
+          </label>
+        </fieldset>
+        <input class="btn btn-default" type="submit" name="submit" value="Purchase">
+      </form>
+      </div>
+    </section>
     <!-- Footer -->
 
     <footer class="primary-footer container group">
