--- a/pages/speakers.html
+++ b/pages/speakers.html
@@ -59,6 +59,7 @@
           </div><!--
             --><aside class="col-1-3">
           <div class="speaker-info">
+            <img src="../img/speakers/shay-howe.jpg" alt="Shay Howe">
             <ul>
               <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
               <li><a href="https://learn.shayhowe.com">learn.shayhowe.com</a></li>
@@ -83,6 +84,7 @@
           </div><!--
             --><aside class="col-1-3">
           <div class="speaker-info">
+            <img src="../img/speakers/chris-mills.jpg" alt="Chris Mills">
             <ul>
               <li><a href="https://twitter.com/shayhowe">@shayhowe</a></li>
               <li><a href="https://learn.shayhowe.com">learn.shayhowe.com</a></li>
